# xdrawchem

./: .gitignore  README.md  README.txt
legacy-xdrawchem-qt3/: HISTORY.txt  config.h  config.h.in  config.status  configure  configure.ac.working  mkinstalldirs  xdrawchem.pro.bak
legacy-xdrawchem-qt3/SPECS/: xdrawchem.spec
legacy-xdrawchem-qt3/autom4te.cache/: output.0  traces.0  traces.1
legacy-xdrawchem-qt3/doc/: files.html
legacy-xdrawchem-qt3/ring/: 6ring_boat.cml  alanine.cml  arginine.cml  asparagine.cml  benzene.cml  boc.cml  cycloheptane.cml  cyclooctane.cml  cyclopentadiene.cml  cyclopropane.cml  cysteine.cml  cytosine.cml  dabsyl.cml  deoxyribose.cml  glutamic_acid.cml  glycine.cml  histidine.cml  imidazole.cml  leucine.cml  lysine.cml  methionine.cml  nitrophenylalanine.cml  pyrimidine.cml  retro.txt  tryptophan.cml  tyrosine.cml  uracil.cml  xdrawchem_it.qm  xdrawchem_pl.qm  xdrawchemrc
legacy-xdrawchem-qt3/translation/: xdrawchem-fr.po  xdrawchem-ru.po  xdrawchem_da.ts  xdrawchem_de.ts  xdrawchem_it.ts  xdrawchem_nl.ts  xdrawchem_pl.ts  xdrawchem_pt_BR.ts
legacy-xdrawchem-qt3/xdrawchem/: aa_xpm_old.h  application.cpp  application.h  application_ring.cpp  arrow.cpp  arrow.h  arrow.moc.cpp  back.xpm  biotools.cpp  biotools.h  bond.cpp  boshcp.cpp  boshcp.h  boxtool.xpm  bracket.moc.cpp  brackets.h  brackettool.xpm  ccw180.xpm  ccw90.xpm  cdx2cdxml.cpp  cdxml_reader.cpp  charsel.moc.cpp  chemdata.cpp  chemdata.h  chemdata_cdx.cpp  chemdata_cml.cpp  chemdata_mdl.cpp  chemdata_rw.cpp  chemdata_tools.cpp.bak  clipboard.h  cml.h  copytool.xpm  curvearrow.cpp  curvearrow.moc.cpp  cw180.xpm  cw270.xpm  cw90.xpm  defs.h  down.xpm  dpoint.h  (+83 more)
legacy-xdrawchem-qt4/: COPYRIGHT.txt  Doxyfile  HISTORY.txt  INSTALL.txt  README.txt  configure  xdrawchem2.kdevelop
legacy-xdrawchem-qt4/doc/: HISTORY.txt  helpmenu.html  (+1 more)
legacy-xdrawchem-qt4/xdrawchem/: CMakeLists.txt  arrow.h  boldtool.xpm  bond.cpp  bond.h  bondedit.h  boshcp.cpp  bracket.cpp  bracket.h  ccw270.xpm  chaintool.xpm  chemdata_cml.cpp  chemdata_event.cpp  chemdata_tools.cpp  chemdata_xdc.cpp  chemdata_xml.cpp  clipboard.h  colorbutton.cpp  colorbutton.h  crings_dialog.cpp  crings_dialog.h  curvearrow.cpp  cuttool.xpm  dashtool.xpm  defs.h  drawable.h  dyk.cpp  fixeddialog.cpp  gobject.cpp  graphdata.h  graphdialog.cpp  graphdialog.h  graphwidget.h  helpwindow.h  http.h  ioiface.cpp  ioiface.h  magnifytools.h  moldata.h  molecule.cpp  (+49 more)
xdrawchem/: INSTALL.txt  README.txt  TODO.txt  aclocal.m4  configure.ac  libtool  xdrawchem.pro
xdrawchem-qt4/: CMakeLists.txt  TODO.txt  config.h.cmake  xdrawchem.pro
xdrawchem-qt4/doc/: formatmenu.html  molinfo.html  spectra.html  toolmenu.html
xdrawchem-qt4/ring/: 6ring_boat.cml  6ring_chair.cml  CMakeLists.txt  adenine.cml  alanine.cml  arginine.cml  asparagine.cml  aspartic_acid.cml  benzene.cml  cyclobutane.cml  cyclohexane.cml  cyclopentadiene.cml  cyclopentane.cml  cyclopropane.cml  cysteine.cml  cytosine.cml  d-fructose.cml  d-glucose.cml  dansyl.cml  deoxyribose.cml  edans.cml  fmoc.cml  glutamic_acid.cml  glutamine.cml  glycine.cml  guanine.cml  histidine.cml  imidazole.cml  isoleucine.cml  leucine.cml  lysine.cml  methionine.cml  phenylalanine.cml  ribose.cml  serine.cml  threonine.cml  thymine.cml  tryptophan.cml  tyrosine.cml  uracil.cml  (+1 more)
xdrawchem-qt4/translation/: ChangeLog  xdrawchem-it.po  xdrawchem_en.ts  xdrawchem_pl.ts
xdrawchem-qt4/xdrawchem/: aa_xpm.h  application.cpp  application.h  application_ob.cpp  application_ring.cpp  arrowtool.xpm  bead.xpm  biotools.cpp  boat6.xpm  boldtool.xpm  bondedit.cpp  boshcp.h  boxtool.xpm  brackettool.xpm  ccw180.xpm  ccw270.xpm  ccw90.xpm  cdxml_reader.cpp  cdxml_reader.h  chaintool.xpm  charsel.cpp  chemdata.cpp  chemdata.h  chemdata_cdxml.cpp  chemdata_edit.cpp  copytool.xpm  cubicbezier.h  curvearrowtool.xpm  cuttool.xpm  cw180.xpm  cw270.xpm  cw90.xpm  dashtool.xpm  defs.h  down.xpm  downtool.xpm  dpoint.h  drawable.cpp  dyk.h  edittool.xpm  (+44 more)
xdrawchem-qt5/: HISTORY.txt  INSTALL.txt  Makefile  README.md  README.txt  xdrawchem.pro
xdrawchem/autom4te.cache/: output.1  requests
xdrawchem/doc/: draw.html  edit.html  editmenu.html  functions.html  groupmenu.html  toolbar.html
xdrawchem/openbabel/math/.deps/: vector3.Plo
xdrawchem/ring/: 6ring_chair.cml  anthracene.cml  aspartic_acid.cml  biotin.cml  biphenyl.cml  cyclopentadiene-sp.cml  d-fructose.cml  dabcyl.cml  forward.xpm  glutamine.cml  indole.cml  phenylalanine.cml  xdrawchem_da.qm  xdrawchem_de.qm  xdrawchem_fr.qm  xdrawchem_nl.qm  xdrawchem_ru.qm
xdrawchem/translation/: ChangeLog  xdrawchem-da.po  xdrawchem-de.po  xdrawchem.pot  xdrawchem_fr.ts
xdrawchem/xdrawchem/: .qmake.internal.cache  CDXConstants.h  application.moc.cpp  application_ob.cpp  arrowtool.xpm  atom.h  biotools.moc.cpp  bond.h  bond.moc.cpp  bondedit.cpp  bondedit.h  bondedit.moc.cpp  bracket.cpp  bracket.h  cdxml_reader.h  charsel.cpp  charsel.h  chemdata.moc.cpp  chemdata_cdxml.cpp  chemdata_edit.cpp  chemdata_event.cpp  chemdata_rxn.cpp  chemdata_tools.cpp  chemdata_xdc.cpp  chemdata_xml.cpp  crings_dialog.cpp  crings_dialog.h  crings_dialog.moc.cpp  curvearrow.h  curvearrowtool.xpm  downtool.xpm  drawable.h  drawable.moc.cpp  dyk.h  dyk.moc.cpp  fixeddialog.cpp  fixeddialog.moc.cpp  graphdialog.cpp  graphdialog.moc.cpp  graphwidget.h  (+51 more)
xdrawchem/xdrawchem/.deps/: application_ob.Po  biotools.moc.Po  bond.moc.Po  boshcp.Po  bracket.Po  bracket.moc.Po  cdxml_reader.Po  charsel.Po  charsel.moc.Po  chemdata.Po  chemdata.moc.Po  chemdata_cdx.Po  chemdata_cml.Po  chemdata_event.Po  chemdata_rxn.Po  crings_dialog.Po  curvearrow.moc.Po  drawable.Po  dyk.Po  fixeddialog.Po  gobject.moc.Po  graphwidget.moc.Po  helpwindow.Po  helpwindow.moc.Po  main.Po  molecule.Po  molecule.moc.Po  molecule_1h_nmr.Po  molecule_smiles.Po  molecule_tools_1.Po  molinfodialog.moc.Po  myfiledialog.Po  netaccess.Po  netaccess.moc.Po  netchoosedialog.Po  netdialog.moc.Po  ngw.Po  ngw.moc.Po  pagesetupdialog.Po  peptidebuilder.moc.Po  (+21 more)
xdrawchem/xdrawchem/.xvpics/: abez.xpm  newman.xpm  symbol_ring_up.xpm
(+193 files in other folders)
